# Epistemic-Engine

./: .gitignore  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  auto_deploy.sh  push_manual.sh  push_updates.sh  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py  setup.py
.github/workflows/: epistemic_guard.yml
data/: .gitkeep
docs/: Architecture.md  Constitution.md  Contributor_Guide.md  DEPLOYMENT.md  Phase5_Scale_Engineering.md  Roadmap.md
paper/: main.tex  references.bib
paper/sections/: 01_introduction.tex  02_related_work.tex  03_epistemic_invariants.tex  04_system_architecture.tex  05_case_studies.tex  06_conclusion.tex
src/: __init__.py
src/assets/: __init__.py  epistemic_engine_profile.asset  gaia_stars.asset  intro_scene.asset
src/assets/scale/: gaia_binary.asset
src/assets/structure/: laniakea.asset
src/assets/ui/: KEYBINDINGS.md  epistemic_dashboard.lua  epistemic_keybindings.asset
src/db/: README.md  __init__.py  schema.sql
src/ingestion/: __init__.py  export_binary_octree.py  export_to_speck.py  generate_cmb_arrow.py  generate_laniakea.py  generate_sun_path.py  ingest_gaia.py
tests/: README.md  test_invariants.py  test_octree.py  test_schema.py
